--- a/index.html
+++ b/index.html
@@ -21,28 +21,30 @@
     <main>
 
         <section class="heroSection">
-            <div>
+            <div class="heroBubbleOne">
                 <h2>Web Carbon Emission Project</h2>
             </div>
-            <div>
+            <div class="heroBubbleTwo">
                 <h4>SCROLL DOWN TO LEARN MORE</h4>
             </div>
-            <div>
+            <div class="calculateCircle">
                 <p>CALCULATE</p>
             </div>
         </section>
         <section class="didYouKnow">
             <h2>DID YOU KNOW</h2>
-            <h3>The inernet alone consumes 46.2Twh electricity per year</h3>
+            <h3>The internet alone consumes 416.2Twh electricity per year</h3>
             <h4>To begin calculation how much CO2 your website uses enter the URL in the field below and hit calculate</h4>
-            <input type="text" id="co2Calculator" placeholder="www.mywebsite.com">
+            <input type="text" id="co2Calculator" placeholder="www.mywebsite.com"> <br>
             <button>CALCULATE</button>
-            <div>GREEN CHECK</div>
+            <div>
+                <p>GREEN CHECK</p>
+            </div>
         </section>
         <section class="greenCheck">
             <h3>We love green energy and renewable energy sources. Does your provider?</h3>
             <h4>Enter a website URL in the field below to look check if the site providers use green and renewable energy sources for hosting</h4>
-            <input type="text" id="greenCheck" placeholder="www.mywebsite.com">
+            <input type="text" id="greenCheck" placeholder="www.mywebsite.com"> <br>
             <button>BEGIN</button>
             <div>
                 <p>RESOURCES</p>
@@ -51,11 +53,11 @@
         <section class="resources">
             <h2>EVERY byte MATTERS</h2>
             <h4>We work towards a cleaner internet, free from as much carbon emission as possible. There are many things you can do as a web developer to help. Read more about how you can contribute here</h4>
-            <section>
-              <a href="https://sustainablewebdesign.org" target="_blank">Sustainable Web Design</a>
-            <a href="https://thegreenfoundation.org" target="_blank">The Green Foundation</a>
-            <a href="https://www.websitecarbon.com" target="_blank">Website Carbon</a>              
-            </section>
+                <ul>
+                    <li><a href="https://sustainablewebdesign.org" target="_blank"> Sustainable Web Design</a></li>
+                    <li><a href="https://thegreenfoundation.org" target="_blank"> The Green Foundation</a></li>
+                    <li> <a href="https://www.websitecarbon.com" target="_blank">Website Carbon</a></li>
+                </ul>            
             <div class="decoCircleOne"></div>
             <div class="smallCircle">
                 <p>THE MISSION</p>
@@ -80,7 +82,7 @@
                     <p>www.thegreenwebfoundation.org</p>
                     <p>Without their tools, publications and research none of this would be possible.</p>
                 </div>
-                <div>                
+                <div class="newsletter">                
                     <p>Want to stay in touch?</p>
                     <p>Sign up to our newsletter</p>
                     <input type="text" id="email" placeholder="Enter Your Email">
