--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             <h3>The internet alone consumes 416.2Twh electricity per year</h3>
             <h4>To begin calculation how much CO2 your website uses enter the URL in the field below and hit calculate</h4>
             <input type="text" id="co2Calculator" placeholder="www.mywebsite.com"> <br>
-            <button>CALCULATE</button>
+            <button id="calculateButton">CALCULATE</button>
             <div>
                 <p>GREEN CHECK</p>
             </div>
         </section>
-        <section class="greenCheck" id="greencheck">
+        <section class="greenCheck" id="greencheckBox">
             <h3>We love green energy and renewable energy sources. Does your provider?</h3>
             <h4>Enter a website URL in the field below to look check if the site providers use green and renewable energy sources for hosting</h4>
             <input type="text" id="greenCheck" placeholder="www.mywebsite.com"> <br>
-            <button>BEGIN</button>
+            <button id="greenCheckButton">BEGIN</button>
             <div>
                 <p>RESOURCES</p>
             </div>
